--- a/index.html
+++ b/index.html
@@ -9,51 +9,67 @@
 </head>
 
 <body>
-  <div class="titulo">
-    <h1>bikcraft</h1>
-  </div>
-  <div class="subtitulo">
-    <a href="">SOBRE</a>
-    <a href="">PRODUTOS</a>
-    <a href="">LOJAS</a>
-    <a href="#footer">CONTATO</a>
 
-
-  </div>
-  <div class="parte1 borda">
-    <div class="texto1">
-      <h1 id="titulo1">Bicicletas Feitas a Mão</h1>
-      <p class="texto">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios a marca.</p>
-      <a class="botao" href="">VER MAIS</a>
+  <header>
+    <div class="titulo">
+      <h1>bikcraft</h1>
     </div>
-    <div class="img-risco"><img src="img/bicicleta.jpg" alt=""></div>
-  </div>
-  <div class="parte2 borda">
-    <h1>VANTAGENS BIKCRAFT</h1>
-    <div class="titulinhos">
-      <div class="spec">
-        <img src="img/eletrica.svg" alt="">
-        <div>
-          <h2>Motor Elétrico</h2>
-          <p class="texto">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-        </div>
+  </header>
+  <nav aria-label="primária">
+    <div class="subtitulo">
+      <a href="">SOBRE</a>
+      <a href="">PRODUTOS</a>
+      <a href="">LOJAS</a>
+      <a href="#footer">CONTATO</a>
+    </div>
+  </nav>
+  <section aria-label="Sobre a Bicicleta">
+    <div class="parte1 borda">
+      <div class="texto1">
+        <h1 id="titulo1">Bicicletas Feitas a Mão</h1>
+        <p class="texto">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios a marca.</p>
+        <a class="botao" href="">VER MAIS</a>
       </div>
-      <div class="spec">
-        <img src="img/velocidade.svg" alt="">
-        <div>
-          <h2>40 km/h</h2>
-          <p class="texto">a mais rápida bicicleta elétrica disponível hoje no mercado</p>
-        </div>
+      <div class="img-risco"><img src="img/bicicleta.jpg" alt=""></div>
+    </div>
+    <div class="parte2 borda">
+      <div class="vantagenstxt">
+        <div class="onda"></div>
+        <h1>VANTAGENS BIKCRAFT</h1>
       </div>
-      <div class="spec">
-        <img src="img/rastreador.svg" alt="">
-        <div>
-          <h2>Rastreador</h2>
-          <p class="texto">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-        </div>
+      <div class="titulinhos">
+        <ol>
+          <li>
+            <div class="spec">
+              <img src="img/eletrica.svg" alt="">
+              <div>
+                <h2>Motor Elétrico</h2>
+                <p class="texto">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="spec">
+              <img src="img/velocidade.svg" alt="">
+              <div>
+                <h2>40 km/h</h2>
+                <p class="texto">a mais rápida bicicleta elétrica disponível hoje no mercado</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="spec">
+              <img src="img/rastreador.svg" alt="">
+              <div>
+                <h2>Rastreador</h2>
+                <p class="texto">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+              </div>
+            </div>
+          </li>
+        </ol>
       </div>
     </div>
-  </div>
+  </section>
   <footer id="footer">
     <p class="texto">Bikcraft. Alguns Direitos Reservados.</p>
   </footer>
