--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <h1>bikcraft</h1>
     </div>
   </header>
-  <nav aria-label="primária">
-    <div class="subtitulo">
-      <a href="">SOBRE</a>
-      <a href="">PRODUTOS</a>
-      <a href="">LOJAS</a>
-      <a href="#footer">CONTATO</a>
-    </div>
+  <nav aria-label="primária" class="subtitulo">
+    <a href="">SOBRE</a>
+    <a href="">PRODUTOS</a>
+    <a href="">LOJAS</a>
+    <a href="#footer">CONTATO</a>
+
   </nav>
   <section aria-label="Sobre a Bicicleta">
     <div class="parte1 borda">
@@ -34,8 +33,8 @@
     </div>
     <div class="parte2 borda">
       <div class="vantagenstxt">
-        <div class="onda"></div>
         <h1>VANTAGENS BIKCRAFT</h1>
+        <div class="onda"></div>
       </div>
       <div class="titulinhos">
         <ol>
