--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <header>
     <div class="titulo">
-      <h1>bikcraft</h1>
+      <img src="img/bikcraft.svg" alt="">
+      <!-- <h1>bikcraft</h1> -->
     </div>
   </header>
   <nav aria-label="primária" class="subtitulo">
