--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="parte1 borda">
       <div class="texto1">
         <h1 id="titulo1">Bicicletas Feitas a Mão</h1>
-        <p class="texto">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios a marca.</p>
+        <p class="texto">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="">VER MAIS</a>
       </div>
       <div class="img-risco"><img src="img/bicicleta.jpg" alt=""></div>
@@ -44,7 +44,7 @@
               <img src="img/eletrica.svg" alt="">
               <div>
                 <h2>Motor Elétrico</h2>
-                <p class="texto">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+                <p class="texto">Permite você viajar distâncias inimagináveis com a sua bike.</p>
               </div>
             </div>
           </li>
@@ -53,7 +53,7 @@
               <img src="img/velocidade.svg" alt="">
               <div>
                 <h2>40 km/h</h2>
-                <p class="texto">a mais rápida bicicleta elétrica disponível hoje no mercado</p>
+                <p class="texto">A mais rápida bicicleta elétrica disponível hoje no mercado</p>
               </div>
             </div>
           </li>
